Fix vertical alignment of Font Awesome icons in the footer

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/0_CGIAR/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/0_CGIAR/styles/_style.scss
@@ -204,6 +204,11 @@ footer div.footer{
   background-color: #fcfcfc;
 }
 
+/* better alignment of Font Awesome icons with surrounding footer text */
+.footer .fa-2x {
+  vertical-align: middle;
+}
+
 #aspect_discovery_CollectionSearch_p_search-query,#aspect_discovery_CommunitySearch_p_search-query{
   left:25%;
  }
